# aoc-2016

./: .gitignore  README.md  get_input.sh  pyproject.toml  setup.cfg
.github/workflows/: aoc-2016.yml  python-package.yml  readme-stars.yml
doc/: day01.md  day19.md  day22.md
src/: day_01.py  day_02.py  day_03.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
src/aoc/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_07.py  day_12.py  day_13.py  day_14.py
src/aoc_2016/: __init__.py
test/: .coveragerc  day04.part2.example  pyproject.toml  resources.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py
